FA-35: add publications
