# backend/core/api/src/core.openapi.yaml
@@ -260,7 +260,27 @@ paths:
 
   /api/publication:
     post:
-      summary: Create publication draft
+      summary: Create publication
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreatePublicationResponse'
+      security:
+        - TokenAuth: [ ]
+      operationId: createPublication
+      tags: [ publication ]
+    get:
+      summary: Get publication
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
       responses:
         200:
           description: Success
@@ -270,7 +290,29 @@ paths:
                 $ref: '#/components/schemas/Publication'
       security:
         - TokenAuth: [ ]
-      operationId: createPublication
+      operationId: getPublocation
+      tags: [ publication ]
+    put:
+      summary: Edit publication
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PublicationEditRequest'
+        required: true
+      responses:
+        200:
+          description: Success
+      security:
+        - TokenAuth: [ ]
+      operationId: editPublication
       tags: [ publication ]
 
   /api/files/upload:
@@ -652,7 +694,7 @@ components:
         - confirmationToken
         - code
 
-    Publication:
+    CreatePublicationResponse:
       type: object
       properties:
         id:
@@ -706,6 +748,135 @@ components:
         - firstName
         - lastName
         - username
+
+    PublicationEditRequest:
+      type: object
+      properties:
+        confirmedAuthors:
+          $ref: '#/components/schemas/ConfirmedAuthors'
+        unconfirmedAuthors:
+          $ref: '#/components/schemas/UnconfirmedAuthors'
+        title:
+          $ref: '#/components/schemas/PublicationStringValue'
+        description:
+          $ref: '#/components/schemas/PublicationStringValue'
+        grantOrganizations:
+          $ref: '#/components/schemas/PublicationStringArrayValue'
+        relatedArticles:
+          $ref: '#/components/schemas/PublicationStringArrayValue'
+        tags:
+          $ref: '#/components/schemas/PublicationStringArrayValue'
+        objectOfStudyTitle:
+          $ref: '#/components/schemas/PublicationStringValue'
+        objectOfStudyDescription:
+          $ref: '#/components/schemas/PublicationStringValue'
+        software:
+          $ref: '#/components/schemas/PublicationStringValue'
+        methodTitle:
+          $ref: '#/components/schemas/PublicationStringValue'
+        methodDescription:
+          $ref: '#/components/schemas/PublicationStringValue'
+        predictedGoals:
+          $ref: '#/components/schemas/PublicationStringValue'
+
+    PublicationStringValue:
+      type: object
+      properties:
+        edited:
+          type: boolean
+        value:
+          type: string
+
+    PublicationStringArrayValue:
+      type: object
+      properties:
+        edited:
+          type: boolean
+        values:
+          type: array
+          items:
+            type: string
+
+    ConfirmedAuthors:
+      type: object
+      properties:
+        edited:
+          type: boolean
+        values:
+          type: array
+          items:
+            type: string
+            format: uuid
+
+    UnconfirmedAuthors:
+      type: object
+      properties:
+        edited:
+          type: boolean
+        values:
+          type: array
+          items:
+            type: object
+            properties:
+              email:
+                type: string
+              fullName:
+                type: string
+              shortBio:
+                type: string
+            required:
+              - email
+              - fullName
+
+    Publication:
+      type: object
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        grantOrganizations:
+          type: array
+          items:
+            type: string
+        relatedArticles:
+          type: array
+          items:
+            type: string
+        tags:
+          type: array
+          items:
+            type: string
+        objectOfStudyTitle:
+          type: string
+        objectOfStudyDescription:
+          type: string
+        software:
+          type: string
+        methodTitle:
+          type: string
+        methodDescription:
+          type: string
+        predictedGoals:
+          type: string
+        authors:
+          type: array
+          items:
+            $ref: '#/components/schemas/Author'
+
+    Author:
+      type: object
+      properties:
+        fullName:
+          type: string
+        email:
+          type: string
+        shortBio:
+          type: string
+      required:
+        - fullName
+        - email
+        - shortBio
 
   securitySchemes:
     PublicAuth:
